# whctools

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
testauth/: celery.py
testauth/settings_aa3/: base.py  local.py
testauth/settings_aa4/: base.py
whctools/: __init__.py  aa3compat.py  admin.py  app_settings.py  apps.py  auth_hooks.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
whctools/migrations/: 0001_initial.py  0002_acl_remove_knownaclaccess_eve_character_and_more.py  0002_alter_applications_options.py  0002_alter_applications_reject_reason.py  0003_aclhistory.py  0003_aclhistory_reason_for_change.py  0004_alter_aclhistory_date_of_change.py  0004_alter_applications_reject_reason_applicationhistory.py  0005_alter_applicationhistory_options_acl_skill_plans.py  0006_rename_skill_plans_acl_skill_sets.py  0007_add_groups_to_acl.py  0008_allow_empty_acl_fields.py  0009_welcomemail.py
whctools/templates/whctools/: base.html  base_staff.html  index.html  list_acl_members.html  staff.html
whctools/templates/whctools/staff/: nav_pills.html  staff_apps_in_progress.html  staff_list_acls.html  staff_rejected_apps.html
whctools/tests/: test_signals.py  test_tasks.py
whctools/views_actions/: player_actions.py
whctools/views_staff/: acl_tools.py  open_applications.py  rejected_applications.py  staff_utils.py
