[metadata]
name = aa_whc_tools
version = attr: aa_whc_tools.__version__
description = EVE University WHC Plugin for Alliance Auth
long_description = file: README.md
long_description_content_type = text/markdown
author = Luxx
author_email = lynkfox@gmail.com
maintainer = Luxx
maintainer_email = lynkfox@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/EVE-University/whctools
keywords =
    allianceauth
    whctools
project_urls =
    Issue / Bug Reports = https://github.com/EVE-University/aa-euni-core/issues
    Changelog = https://github.com/EVE-University/aa-euni-core/blob/master/CHANGELOG.md

[options]
packages = find_namespace:
install_requires =
    allianceauth>=4.0.0
python_requires = ~=3.11
include_package_data = True
zip_safe = False

[options.packages.find]
include = whctools*

[options.package_data]
* = *